chore: formalize Java engineering standards